tests/asm-link/undefined-builtins/rgbasm.err
error: PC doesn't have a value outside of a section
   ╭─[ test.asm:3:9 ]
   │
 3 │ println @
   │         ┬  
   │         ╰── this symbol is invalid
───╯
error: PC doesn't have a value outside of a section
   ╭─[ test.asm:4:11 ]
   │
 4 │ println "{@}?"
   │           ┬  
   │           ╰── this interpolation is invalid
───╯
error: `.` doesn't have a value outside of a label scope
   ╭─[ test.asm:8:9 ]
   │
 8 │ println .
   │         ┬  
   │         ╰── this expansion is invalid
───╯
error: `.` doesn't have a value outside of a label scope
   ╭─[ test.asm:9:11 ]
   │
 9 │ println "{.}?"
   │           ┬  
   │           ╰── this interpolation is invalid
───╯
error: `..` doesn't have a value outside of a local label scope
    ╭─[ test.asm:13:9 ]
    │
 13 │ println ..
    │         ─┬  
    │          ╰── this expansion is invalid
────╯
error: `..` doesn't have a value outside of a local label scope
    ╭─[ test.asm:14:11 ]
    │
 14 │ println "{..}?"
    │           ─┬  
    │            ╰── this interpolation is invalid
────╯
error: `_NARG` doesn't have a value outside of a macro
    ╭─[ test.asm:18:9 ]
    │
 18 │ println _NARG
    │         ──┬──  
    │           ╰──── this symbol is invalid
────╯
error: `_NARG` doesn't have a value outside of a macro
    ╭─[ test.asm:19:11 ]
    │
 19 │ println "{_NARG}?"
    │           ──┬──  
    │             ╰──── this interpolation is invalid
────╯
8 errors generated.
